--- a/app/src/main/res/layout/dashbord_shimer.xml
+++ b/app/src/main/res/layout/dashbord_shimer.xml
@@ -3,141 +3,119 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <variable
-            name="dashbord"
-            type="com.example.myshop.model.ProductDataClass" />
 
-    </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-
-
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="8dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="8dp"
             app:cardCornerRadius="10dp"
-
             app:cardElevation="5dp"
-            app:strokeColor="@color/pink"
             app:strokeWidth=".5dp"
-            >
+            app:strokeColor="@color/pink"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/imageView5"
-                    setImageNoCircleImageView="@{dashbord.product_image}"
+                <View
+                    android:id="@+id/imageView5_Shimer"
                     android:layout_width="180dp"
                     android:layout_height="170dp"
                     android:layout_marginBottom="8dp"
-                    android:scaleType="fitXY"
-                    app:layout_constraintBottom_toTopOf="@+id/textView"
+                    android:background="@color/second_text_color"
+                    app:layout_constraintBottom_toTopOf="@+id/textView_shimer"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
-                    tools:srcCompat="@tools:sample/avatars" />
+                />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/textView_shimer"
                     style="@style/viewParent.normalText"
-
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:maxLines="1"
                     android:text="@string/loading"
                     android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-                    app:layout_constraintStart_toEndOf="@+id/textView7"
-                    app:layout_constraintTop_toTopOf="@+id/textView7" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView6_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/textView7_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/textView7_shimer" />
 
                 <TextView
                     android:id="@+id/textView2"
                     style="@style/viewParent.normalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="3dp"
+                    android:layout_marginStart="6dp"
                     android:maxLines="1"
-                    android:text="@{dashbord.product_title}"
+                    android:text="@string/loading"
                     android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                    app:layout_constraintStart_toEndOf="@+id/textView6"
-                    app:layout_constraintTop_toTopOf="@+id/textView6" />
+                    app:layout_constraintBottom_toBottomOf="@+id/textView6_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/textView6_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/textView6_shimer" />
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/imageView6_shimer"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
+                    app:tint="@color/second_text_color"
                     android:layout_marginBottom="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView7"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView7_shimer"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/imageView7"
+                    app:layout_constraintStart_toStartOf="@+id/imageView7_shimer"
                     app:srcCompat="@drawable/ic_dollar" />
 
                 <ImageView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/imageView7_shimer"
                     android:layout_width="15dp"
+                    app:tint="@color/second_text_color"
                     android:layout_height="15dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="10dp"
-                    app:layout_constraintBottom_toTopOf="@+id/imageView6"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView6_shimer"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView5"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView5_Shimer"
                     app:srcCompat="@drawable/ic_product_selected" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textView6_shimer"
                     style="@style/viewParent.normalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="@string/Product_title"
                     android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-                    app:layout_constraintStart_toEndOf="@+id/imageView7"
-                    app:layout_constraintTop_toTopOf="@+id/imageView7" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView7_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/imageView7_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/imageView7_shimer" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/textView7_shimer"
                     style="@style/viewParent.normalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:text="@string/price"
                     android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-                    app:layout_constraintStart_toEndOf="@+id/imageView6"
-                    app:layout_constraintTop_toTopOf="@+id/imageView6" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView6_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/imageView6_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/imageView6_shimer" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/item_dashbord_prof"
-            android:layout_width="50dp"
-            setImage="@{dashbord.profImge}"
-            android:layout_height="50dp"
-            android:elevation="50dp"
-            android:layout_marginTop="3dp"
-         
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/placeholder_black" />
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
