--- a/app/src/main/res/layout/fragment_dashbord.xml
+++ b/app/src/main/res/layout/fragment_dashbord.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shimmer_recycler_item_count="8"
-                app:shimmer_recycler_layout="@layout/dashbord_shimer" />
+                app:shimmer_recycler_layout="@layout/item_dashbord_shimer" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
