--- a/app/src/main/res/layout/item_dashbord.xml
+++ b/app/src/main/res/layout/item_dashbord.xml
@@ -132,12 +132,12 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/item_dashbord_prof"
             android:layout_width="50dp"
-            setImage="@{dashbord.profImge}"
+            setImageprof="@{dashbord.profImge}"
             android:layout_height="50dp"
             android:elevation="50dp"
             android:layout_marginTop="3dp"
          
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/placeholder_black" />
+             />
     </FrameLayout>
 </layout>
