--- a/app/src/main/res/layout/item_dashbord_shimer.xml
+++ b/app/src/main/res/layout/item_dashbord_shimer.xml
@@ -5,22 +5,39 @@
 
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <FrameLayout
+            android:id="@+id/circle"
+            android:layout_width="50dp"
+            android:backgroundTint="@color/second_text_color"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_circle_icons_mail"
+            android:layout_marginStart="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="-20dp"
+
+            android:elevation="20dp"
+            android:tint="@color/second_text_color"
+            app:civ_circle_background_color="@color/second_text_color" />
+
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/materialCardView2"
             android:layout_width="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/circle"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+
+
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
-            app:strokeWidth=".5dp"
             app:strokeColor="@color/pink"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:strokeWidth=".5dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
@@ -36,8 +53,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView_shimer"
@@ -69,18 +85,17 @@
                     android:id="@+id/imageView6_shimer"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    app:tint="@color/second_text_color"
                     android:layout_marginBottom="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageView7_shimer"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageView7_shimer"
-                    app:srcCompat="@drawable/ic_dollar" />
+                    app:srcCompat="@drawable/ic_dollar"
+                    app:tint="@color/second_text_color" />
 
                 <ImageView
                     android:id="@+id/imageView7_shimer"
                     android:layout_width="15dp"
-                    app:tint="@color/second_text_color"
                     android:layout_height="15dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -88,7 +103,8 @@
                     app:layout_constraintBottom_toTopOf="@+id/imageView6_shimer"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView5_Shimer"
-                    app:srcCompat="@drawable/ic_product_selected" />
+                    app:srcCompat="@drawable/ic_product_selected"
+                    app:tint="@color/second_text_color" />
 
                 <TextView
                     android:id="@+id/textView6_shimer"
@@ -117,5 +133,5 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 </layout>
