--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -112,6 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
+                    style="@style/viewParent.normalText"
                     android:text="@string/Product_title"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView2"
