--- a/app/src/main/res/layout/item_product_shimmer.xml
+++ b/app/src/main/res/layout/item_product_shimmer.xml
@@ -1,71 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    >
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:background="@color/second_text_color"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+    <data>
+        <variable
+            name="product"
+            type="com.example.myshop.model.ProductDataClass" />
+    </data>
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/shape_shimmer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:background="@color/second_text_color"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/ic_price2" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toEndOf="@+id/frameLayout"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout"
-        app:srcCompat="@drawable/ic_order_selected" />
-    <View
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height=".5dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/second_text_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        android:background="#F6F6F6"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/product_matrialroot"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
+            android:clickable="true"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/second_text_color"
+            app:strokeWidth=".3dp"
+            android:focusable="true">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View
+                    android:id="@+id/circleImageView_shimmer"
+                   android:background="@color/second_text_color"
+                     android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/product_title_tv_shimer"
+                    style="@style/viewParent.headerText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/second_text_color"
+                    android:layout_marginStart="4dp"
+                    android:textSize="10sp"
+                    android:text="@string/loading"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView8_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/textView8_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/textView8_shimer" />
+
+                <TextView
+                    android:id="@+id/product_price_tv_shimer"
+                    style="@style/viewParent.normalText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:text="@string/loading"
+                    android:textColor="@color/second_text_color"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView9_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/textView9_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/textView9_shimer" />
+
+                <ImageView
+                    android:id="@+id/imageView_shimer"
+                    android:layout_width="20dp"
+                    app:tint="@color/second_text_color"
+                    android:layout_height="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView11_shimer"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView2_shimer"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="@+id/imageView2_shimer"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2_shimer"
+                    app:srcCompat="@drawable/ic_dollar" />
+
+                <ImageView
+                    android:id="@+id/imageView2_shimer"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:tint="@color/second_text_color"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/circleImageView_shimmer"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_order_selected" />
+
+                <ImageView
+                    android:id="@+id/product_delete_shimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    app:tint="@color/second_text_color"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_delete" />
+
+                <TextView
+                    android:id="@+id/textView8_shimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/viewParent.normalText"
+                    android:textColor="@color/second_text_color"
+                    android:layout_marginStart="3dp"
+                    android:text="@string/Product_title"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView2_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/imageView2_shimer" />
+
+                <TextView
+                    android:id="@+id/textView9_shimer"
+                    style="@style/viewParent.normalText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:text="@string/price"
+                    android:textColor="@color/second_text_color"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/imageView_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/imageView_shimer" />
+
+                <ImageView
+                    android:id="@+id/imageView11_shimer"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:tint="@color/second_text_color"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView_shimer"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="@+id/imageView_shimer"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView_shimer"
+                    app:srcCompat="@drawable/ic_number" />
+
+                <TextView
+                    android:id="@+id/textView10_shimer"
+                    style="@style/viewParent.normalText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:text="@string/product_quantity"
+                    android:textSize="10sp"
+                    android:textColor="@color/second_text_color"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView11_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/imageView11_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/imageView11_shimer" />
+
+                <TextView
+                    android:id="@+id/item_product_quantity_shimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:textColor="@color/second_text_color"
+                    android:text="@string/loading"
+                    android:textSize="10sp"
+                    style="@style/viewParent.normalText"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView10_shimer"
+                    app:layout_constraintStart_toEndOf="@+id/textView10_shimer"
+                    app:layout_constraintTop_toTopOf="@+id/textView10_shimer" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+</layout>
