--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,16 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
         <variable
             name="order"
             type="com.example.myshop.model.OrderDataClass" />
 
-    </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            </data>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:background="#F6F6F6"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/order_root"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@color/white"
+                    android:clickable="true"
+                    app:cardCornerRadius="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:strokeColor="@color/second_text_color"
+                    app:strokeWidth=".3dp"
+                    android:focusable="true">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/order_constraintLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/order_circleImageView"
+                            setImageNoCircleImageView="@{order.cartImage}"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
+                        <TextView
+                            android:id="@+id/order_fullname"
+                            style="@style/viewParent.headerText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="4dp"
+                            android:text="@{order.address.fullname}"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/order_textView8"
+                            app:layout_constraintStart_toEndOf="@+id/order_textView8"
+                            app:layout_constraintTop_toTopOf="@+id/order_textView8" />
+
+                        <TextView
+                            android:id="@+id/order_amount"
+                            style="@style/viewParent.normalText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:text="@{order.totalAmount}"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/order_textView9"
+                            app:layout_constraintStart_toEndOf="@+id/order_textView9"
+                            app:layout_constraintTop_toTopOf="@+id/order_textView9" />
+
+                        <ImageView
+                            android:id="@+id/orderimageView"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            app:layout_constraintBottom_toTopOf="@+id/order_imageView11"
+                            app:layout_constraintEnd_toEndOf="@+id/order_imageView2"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintStart_toStartOf="@+id/order_imageView2"
+                            app:layout_constraintTop_toBottomOf="@+id/order_imageView2"
+                            app:srcCompat="@drawable/ic_dollar" />
+
+                        <ImageView
+                            android:id="@+id/order_imageView2"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_marginStart="8dp"
+                            app:layout_constraintBottom_toTopOf="@+id/orderimageView"
+                            app:layout_constraintStart_toEndOf="@+id/order_circleImageView"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/ic_man" />
+
+                        <ImageView
+                            android:id="@+id/order_product_delete"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/ic_delete" />
+
+                        <TextView
+                            android:id="@+id/order_textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            style="@style/viewParent.normalText"
+                            android:text="@string/fullname"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/order_imageView2"
+                            app:layout_constraintStart_toEndOf="@+id/order_imageView2"
+                            app:layout_constraintTop_toTopOf="@+id/order_imageView2" />
+
+                        <TextView
+                            android:id="@+id/order_textView9"
+                            style="@style/viewParent.normalText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:text="@string/total_amount"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/orderimageView"
+                            app:layout_constraintStart_toEndOf="@+id/orderimageView"
+                            app:layout_constraintTop_toTopOf="@+id/orderimageView" />
+
+                        <ImageView
+                            android:id="@+id/order_imageView11"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/orderimageView"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintStart_toStartOf="@+id/orderimageView"
+                            app:layout_constraintTop_toBottomOf="@+id/orderimageView"
+                            app:srcCompat="@drawable/ic_calling" />
+
+                        <TextView
+                            android:id="@+id/order_textView10"
+                            style="@style/viewParent.normalText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:text="@string/mobile_number"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/order_imageView11"
+                            app:layout_constraintStart_toEndOf="@+id/order_imageView11"
+                            app:layout_constraintTop_toTopOf="@+id/order_imageView11" />
+
+                        <TextView
+                            android:id="@+id/order_item_product_quantity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            setprice="@{order.address.phonenumber}"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/order_textView10"
+                            app:layout_constraintStart_toEndOf="@+id/order_textView10"
+                            app:layout_constraintTop_toTopOf="@+id/order_textView10" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+        </layout>
